gen/MiLenguajeParser.java
// Generated from C:/Games/lenguajes3/grammar\MiLenguaje.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, TKN_PERIOD=21, TKN_EQUALS=22, TKN_COMMA=23, 
		TKN_COLON=24, TKN_LEFT_BRAC=25, TKN_RIGHT_BRAC=26, TKN_LEFT_PAREN=27, 
		TKN_RIGHT_PAREN=28, TKN_PLUS=29, TKN_MINUS=30, TKN_TIMES=31, TKN_DIV=32, 
		TKN_DIFF=33, TKN_LESS=34, TKN_LEQ=35, TKN_GREATER=36, TKN_GEQ=37, TKN_NUMBER=38, 
		TKN_TEXT=39, TRUE=40, FALSE=41, ID=42;
	public static final int
		RULE_s = 0, RULE_srecursion = 1, RULE_routrecursion = 2, RULE_x = 3, RULE_types = 4, 
		RULE_xrecursion = 5, RULE_built = 6, RULE_bifunction = 7, RULE_params = 8, 
		RULE_paramsp = 9, RULE_xp = 10, RULE_conditional = 11, RULE_ei = 12, RULE_else = 13, 
		RULE_while = 14, RULE_for = 15, RULE_step = 16, RULE_etiq = 17, RULE_goto = 18, 
		RULE_routine = 19, RULE_xorempty = 20, RULE_exec = 21, RULE_corch = 22, 
		RULE_mem = 23, RULE_memp = 24, RULE_a = 25, RULE_asig = 26, RULE_b = 27, 
		RULE_bp = 28, RULE_c = 29, RULE_cp = 30, RULE_d = 31, RULE_dp = 32, RULE_e = 33, 
		RULE_ep = 34, RULE_f = 35, RULE_g = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"s", "srecursion", "routrecursion", "x", "types", "xrecursion", "built", 
			"bifunction", "params", "paramsp", "xp", "conditional", "ei", "else", 
			"while", "for", "step", "etiq", "goto", "routine", "xorempty", "exec", 
			"corch", "mem", "memp", "a", "asig", "b", "bp", "c", "cp", "d", "dp", 
			"e", "ep", "f", "g"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Array'", "'Stack'", "'Program'", "'TextWindow'", "'If'", "'Then'", 
			"'EndIf'", "'ElseIf'", "'Else'", "'While'", "'EndWhile'", "'For'", "'To'", 
			"'EndFor'", "'Step'", "'Goto'", "'Sub'", "'EndSub'", "'And'", "'Or'", 
			"'.'", "'='", "','", "':'", "'['", "']'", "'('", "')'", "'+'", "'-'", 
			"'*'", "'/'", "'<>'", "'<'", "'<='", "'>'", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "TKN_PERIOD", "TKN_EQUALS", 
			"TKN_COMMA", "TKN_COLON", "TKN_LEFT_BRAC", "TKN_RIGHT_BRAC", "TKN_LEFT_PAREN", 
			"TKN_RIGHT_PAREN", "TKN_PLUS", "TKN_MINUS", "TKN_TIMES", "TKN_DIV", "TKN_DIFF", 
			"TKN_LESS", "TKN_LEQ", "TKN_GREATER", "TKN_GEQ", "TKN_NUMBER", "TKN_TEXT", 
			"TRUE", "FALSE", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SContext extends ParserRuleContext {
		public RoutineContext routine() {
			return getRuleContext(RoutineContext.class,0);
		}
		public SrecursionContext srecursion() {
			return getRuleContext(SrecursionContext.class,0);
		}
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public RoutrecursionContext routrecursion() {
			return getRuleContext(RoutrecursionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MiLenguajeParser.EOF, 0); }
		public SContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_s; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitS(this);
		}
	}

	public final SContext s() throws RecognitionException {
		SContext _localctx = new SContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_s);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				routine();
				setState(75);
				srecursion();
				}
				break;
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__9:
			case T__11:
			case T__15:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				x();
				setState(78);
				routrecursion();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SrecursionContext extends ParserRuleContext {
		public SContext s() {
			return getRuleContext(SContext.class,0);
		}
		public SrecursionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_srecursion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterSrecursion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitSrecursion(this);
		}
	}

	public final SrecursionContext srecursion() throws RecognitionException {
		SrecursionContext _localctx = new SrecursionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_srecursion);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				s();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RoutrecursionContext extends ParserRuleContext {
		public RoutineContext routine() {
			return getRuleContext(RoutineContext.class,0);
		}
		public SrecursionContext srecursion() {
			return getRuleContext(SrecursionContext.class,0);
		}
		public RoutrecursionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routrecursion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterRoutrecursion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitRoutrecursion(this);
		}
	}

	public final RoutrecursionContext routrecursion() throws RecognitionException {
		RoutrecursionContext _localctx = new RoutrecursionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_routrecursion);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				routine();
				setState(88);
				srecursion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XContext extends ParserRuleContext {
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public XrecursionContext xrecursion() {
			return getRuleContext(XrecursionContext.class,0);
		}
		public XContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_x; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterX(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitX(this);
		}
	}

	public final XContext x() throws RecognitionException {
		XContext _localctx = new XContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_x);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			types();
			setState(94);
			xrecursion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypesContext extends ParserRuleContext {
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public WhileContext while_() {
			return getRuleContext(WhileContext.class,0);
		}
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public XpContext xp() {
			return getRuleContext(XpContext.class,0);
		}
		public GotoContext goto_() {
			return getRuleContext(GotoContext.class,0);
		}
		public BuiltContext built() {
			return getRuleContext(BuiltContext.class,0);
		}
		public TypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitTypes(this);
		}
	}

	public final TypesContext types() throws RecognitionException {
		TypesContext _localctx = new TypesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_types);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				conditional();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				for_();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				while_();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				match(ID);
				setState(100);
				xp();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				goto_();
				}
				break;
			case T__0:
			case T__1:
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 6);
				{
				setState(102);
				built();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XrecursionContext extends ParserRuleContext {
		public XContext x() {
			return getRuleContext(XContext.class,0);
		}
		public XrecursionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xrecursion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterXrecursion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitXrecursion(this);
		}
	}

	public final XrecursionContext xrecursion() throws RecognitionException {
		XrecursionContext _localctx = new XrecursionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_xrecursion);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__9:
			case T__11:
			case T__15:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				x();
				}
				break;
			case T__6:
			case T__7:
			case T__8:
			case T__10:
			case T__13:
			case T__16:
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BuiltContext extends ParserRuleContext {
		public BifunctionContext bifunction() {
			return getRuleContext(BifunctionContext.class,0);
		}
		public BuiltContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_built; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterBuilt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitBuilt(this);
		}
	}

	public final BuiltContext built() throws RecognitionException {
		BuiltContext _localctx = new BuiltContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_built);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(T__0);
				setState(110);
				bifunction();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(T__1);
				setState(112);
				bifunction();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(T__2);
				setState(114);
				bifunction();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				match(T__3);
				setState(116);
				bifunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BifunctionContext extends ParserRuleContext {
		public TerminalNode TKN_PERIOD() { return getToken(MiLenguajeParser.TKN_PERIOD, 0); }
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public TerminalNode TKN_LEFT_PAREN() { return getToken(MiLenguajeParser.TKN_LEFT_PAREN, 0); }
		public ParamspContext paramsp() {
			return getRuleContext(ParamspContext.class,0);
		}
		public TerminalNode TKN_RIGHT_PAREN() { return getToken(MiLenguajeParser.TKN_RIGHT_PAREN, 0); }
		public BifunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bifunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterBifunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitBifunction(this);
		}
	}

	public final BifunctionContext bifunction() throws RecognitionException {
		BifunctionContext _localctx = new BifunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bifunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(TKN_PERIOD);
			setState(120);
			match(ID);
			setState(121);
			match(TKN_LEFT_PAREN);
			setState(122);
			paramsp();
			setState(123);
			match(TKN_RIGHT_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public TerminalNode TKN_COMMA() { return getToken(MiLenguajeParser.TKN_COMMA, 0); }
		public ParamspContext paramsp() {
			return getRuleContext(ParamspContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_params);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TKN_COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(TKN_COMMA);
				setState(126);
				paramsp();
				}
				break;
			case TKN_RIGHT_PAREN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamspContext extends ParserRuleContext {
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ParamspContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterParamsp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitParamsp(this);
		}
	}

	public final ParamspContext paramsp() throws RecognitionException {
		ParamspContext _localctx = new ParamspContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_paramsp);
		try {
			setState(134);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
			case T__3:
			case TKN_LEFT_PAREN:
			case TKN_MINUS:
			case TKN_NUMBER:
			case TKN_TEXT:
			case TRUE:
			case FALSE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				b();
				setState(131);
				params();
				}
				break;
			case TKN_COMMA:
			case TKN_RIGHT_PAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				params();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XpContext extends ParserRuleContext {
		public EtiqContext etiq() {
			return getRuleContext(EtiqContext.class,0);
		}
		public ExecContext exec() {
			return getRuleContext(ExecContext.class,0);
		}
		public AsigContext asig() {
			return getRuleContext(AsigContext.class,0);
		}
		public XpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterXp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitXp(this);
		}
	}

	public final XpContext xp() throws RecognitionException {
		XpContext _localctx = new XpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_xp);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TKN_COLON:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				etiq();
				}
				break;
			case TKN_LEFT_PAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				exec();
				}
				break;
			case TKN_EQUALS:
			case TKN_LEFT_BRAC:
				enterOuterAlt(_localctx, 3);
				{
				setState(138);
				asig();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalContext extends ParserRuleContext {
		public TerminalNode TKN_LEFT_PAREN() { return getToken(MiLenguajeParser.TKN_LEFT_PAREN, 0); }
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public TerminalNode TKN_RIGHT_PAREN() { return getToken(MiLenguajeParser.TKN_RIGHT_PAREN, 0); }
		public XoremptyContext xorempty() {
			return getRuleContext(XoremptyContext.class,0);
		}
		public EiContext ei() {
			return getRuleContext(EiContext.class,0);
		}
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitConditional(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_conditional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__4);
			setState(142);
			match(TKN_LEFT_PAREN);
			setState(143);
			b();
			setState(144);
			match(TKN_RIGHT_PAREN);
			setState(145);
			match(T__5);
			setState(146);
			xorempty();
			setState(147);
			ei();
			setState(148);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EiContext extends ParserRuleContext {
		public TerminalNode TKN_LEFT_PAREN() { return getToken(MiLenguajeParser.TKN_LEFT_PAREN, 0); }
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public TerminalNode TKN_RIGHT_PAREN() { return getToken(MiLenguajeParser.TKN_RIGHT_PAREN, 0); }
		public XoremptyContext xorempty() {
			return getRuleContext(XoremptyContext.class,0);
		}
		public EiContext ei() {
			return getRuleContext(EiContext.class,0);
		}
		public ElseContext else_() {
			return getRuleContext(ElseContext.class,0);
		}
		public EiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ei; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterEi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitEi(this);
		}
	}

	public final EiContext ei() throws RecognitionException {
		EiContext _localctx = new EiContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_ei);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(T__7);
				setState(151);
				match(TKN_LEFT_PAREN);
				setState(152);
				b();
				setState(153);
				match(TKN_RIGHT_PAREN);
				setState(154);
				match(T__5);
				setState(155);
				xorempty();
				setState(156);
				ei();
				}
				break;
			case T__6:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				else_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseContext extends ParserRuleContext {
		public XoremptyContext xorempty() {
			return getRuleContext(XoremptyContext.class,0);
		}
		public ElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitElse(this);
		}
	}

	public final ElseContext else_() throws RecognitionException {
		ElseContext _localctx = new ElseContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_else);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(T__8);
				setState(162);
				xorempty();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
